crates/test-ui/ui/mutable_id_not_clone_not_retain.stderr
error[E0599]: the method `clone` exists for struct `Id<NSMutableObject>`, but its trait bounds were not satisfied
 --> ui/mutable_id_not_clone_not_retain.rs
  |
  | / extern_class!(
  | |     struct NSMutableObject;
  | |
  | |     unsafe impl ClassType for NSMutableObject {
... |
  | |     }
  | | );
  | |_- doesn't satisfy `NSMutableObject: IsIdCloneable`
...
  |       let _ = obj.clone();
  |                   ^^^^^ method cannot be called on `Id<NSMutableObject>` due to unsatisfied trait bounds
  |
 ::: $WORKSPACE/crates/objc2/src/rc/id.rs
  |
  |   pub struct Id<T: ?Sized> {
  |   ------------------------ doesn't satisfy `Id<NSMutableObject>: Clone`
  |
  = note: the following trait bounds were not satisfied:
          `NSMutableObject: IsIdCloneable`
          which is required by `Id<NSMutableObject>: Clone`
note: the trait `IsIdCloneable` must be implemented
 --> $WORKSPACE/crates/objc2/src/mutability.rs
  |
  | pub unsafe trait IsIdCloneable: private_traits::Sealed {}
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error[E0277]: the trait bound `Mutable: mutability::MutabilityIsRetainable` is not satisfied
 --> ui/mutable_id_not_clone_not_retain.rs
  |
  |     let _ = obj.retain();
  |                 ^^^^^^ the trait `mutability::MutabilityIsRetainable` is not implemented for `Mutable`
  |
  = help: the following other types implement trait `mutability::MutabilityIsRetainable`:
            Immutable
            InteriorMutable
            MainThreadOnly
  = note: required for `NSMutableObject` to implement `IsRetainable`
note: required by a bound in `retain`
 --> $WORKSPACE/crates/objc2/src/top_level_traits.rs
  |
  |     fn retain(&self) -> Id<Self>
  |        ------ required by a bound in this associated function
  |     where
  |         Self: IsRetainable,
  |               ^^^^^^^^^^^^ required by this bound in `ClassType::retain`
